<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Radio Fm</string>
    <string name="app_name1">Radio FM</string>
    <string name="is_display_ad">true</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="lastfm_api_key">57ee3318536b23ee81d6b27e36997cde</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="action_settings">Settings</string>

    <string name="tab_text_1">RADIO FM</string>
    <string name="tab_text_2">MORE APPS</string>
    <string name="tab_text_3">POLICIES</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string-array name="station_names">
        <item>Universal 88.1 Fm</item>
        <item>88.9 Noticias</item>
        <item>Oye 89.7 Fm</item>
        <item>Imagen 90.5 Fm</item>
        <item>Alfa Radio 91.3 Fm</item>
        <item>La Ke Buena 92.9 Fm</item>
        <item>Joya 93.7 Fm</item>
        <item>Opus 94.5 Fm</item>
        <item>Amor 95.3 Fm</item>
        <item>W Radio</item>
        <item>Stereo 97.7 Fm</item>
        <item>Reporte 98.5 Fm</item>
        <item>Radio Disney</item>
        <item>Stereo Cien</item>
        <item>Beat 100.9 Fm</item>
        <item>Los 40 Principales 97.7 fm</item>
        <item>MVS Noticias</item>
        <item>Grupo Formula</item>
        <item>Exa 104.9</item>
        <item>Reactor</item>
        <item>Mix 106.5 Fm</item>
        <item>La Zeta 107.3 fm</item>


    </string-array>

    <string-array name="station_urls">
        <item>http://18733.live.streamtheworld.com/XHRED_FM_SC</item>
        <item>http://19793.live.streamtheworld.com/XHMFM_SC</item>
        <item>http://18393.live.streamtheworld.com/XEOYEFM_SC</item>
        <item>http://18903.live.streamtheworld.com/XEDAFM_SC</item>
        <item>http://18593.live.streamtheworld.com/XHFAJ_FM_SC</item>
        <item>http://14933.live.streamtheworld.com/KEBUENA_SC</item>
        <item>http://16613.live.streamtheworld.com/XEJP_FM_SC</item>
        <item>http://imer-edge1.cdnstream.com/1501_64</item>
        <item>http://18803.live.streamtheworld.com/XHSHFM_SC</item>
        <item>http://14993.live.streamtheworld.com/W_RADIO_SC</item>
        <item>http://14083.live.streamtheworld.com/XERC_FM_SC</item>
        <item>http://19263.live.streamtheworld.com/XHDLFM_SC</item>
        <item>http://16643.live.streamtheworld.com/XHPOPFM_SC</item>
        <item>http://14613.live.streamtheworld.com/XHMMFMAAC_SC</item>
        <item>http://17813.live.streamtheworld.com/XHSONFM_SC</item>
        <item>http://20283.live.streamtheworld.com/LOS40_MEXICO_SC</item>
        <item>http://20283.live.streamtheworld.com/XHMVSFM_SC</item>
        <item>http://107.155.72.152/radiofaudio/FM104.1/icecast.audio</item>
        <item>http://18323.live.streamtheworld.com/XHEXA_SC</item>
        <item>http://imer-edge1.cdnstream.com/1502_64</item>
        <item>http://14613.live.streamtheworld.com/XHDFMFM_SC</item>
        <item>http://14083.live.streamtheworld.com/XEQR_FM_SC</item>

    </string-array>

    <string-array name="station_types">
        <item>mp3</item>
        <item>mp3</item>
        <item>mp3</item>    <!-- mp3 or aac -->
        <item>mp3</item>
        <item>mp3</item>
        <item>mp3</item>
        <item>mp3</item>
        <item>mp3</item>
        <item>mp3</item>
        <item>mp3</item>
        <item>mp3</item>
        <item>mp3</item>
        <item>mp3</item>
        <item>mp3</item>
        <item>mp3</item>
        <item>mp3</item>
        <item>mp3</item>
        <item>mp3</item>
        <item>mp3</item>
        <item>mp3</item>
        <item>mp3</item>
        <item>mp3</item>
        <item>mp3</item>
        <item>mp3</item>
        <item>mp3</item>
        <item>mp3</item>

    </string-array>

    <string name="menu_radio">Lista de Radios</string>
    <string name="menu_stations">Radio FM</string>
    <string name="menu_facebook">Politicas</string>
    <string name="menu_twitter">Twitter</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="current_playing_track">Current Playing Track</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_principal">Principal</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="policies">POLICIES</string>

</resources>